Added basic transclusion example with web component technology

--- a/polymer-client/package.json
+++ b/polymer-client/package.json
@@ -8,12 +8,14 @@
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
     "browser-sync": "^2.6.4",
+    "cors": "^2.8.1",
     "del": "^1.1.1",
     "glob": "^5.0.6",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-cache": "^0.2.8",
     "gulp-changed": "^1.0.0",
+    "gulp-compass": "^2.1.0",
     "gulp-cssmin": "^0.1.6",
     "gulp-flatten": "0.0.4",
     "gulp-if": "^1.2.1",
@@ -29,7 +31,6 @@
     "gulp-useref": "^1.1.2",
     "gulp-vulcanize": "^6.0.0",
     "gulp-yuidoc": "^0.1.2",
-    "gulp-compass": "^2.1.0",
     "jshint-stylish": "^1.0.1",
     "merge-stream": "^0.1.7",
     "opn": "^1.0.0",
