--- a/jpa-book-service/booksdb.properties
+++ b/jpa-book-service/booksdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Fri Mar 17 21:57:22 CET 2017
+#Mon Mar 20 17:23:20 CET 2017
 version=2.3.3
-modified=yes
+modified=no
 tx_timestamp=0
